# Learning_CMake

./: README.md
(File 1) Setting Up/: CMakelists.txt  README - Setup.md  main.cpp  main2.cpp
(File 1) Setting Up/headers/: header.cpp  header.hpp
(File 2) Linking Libraries/: CMakeLists.txt
(File 2) Linking Libraries/src/: main.cpp
(File_1)_Setting_Up/: CMakelists.txt  README - Setup.md  header.cpp  header.hpp  main.cpp
